# Ultracold-Plasmas

./: .gitignore  README.md  calcEmpiricalQuadrupoleFieldModel.m
Custom Matlab Packages/: generateSimpsonIntWeights.m
Magnetized Plasmas/: ionZeemanShiftedLIFTransitions.m
Magnetized Plasmas/Theoretical Quadrupole Fields/: calcFieldLine.m  calcFieldLine.m~  field-lines-schematic.eps  fieldForQuadrupoleConfig.asv  fieldForQuadrupoleConfig.m  fieldForTwoCoilAntiHelmholtz.m  fieldFromSingleCurrentLoop.asv  fieldFromSingleCurrentLoop.m  fields-at-plasma.eps  getFieldsAtPlasma.m  getFieldsLinesForExpSchematic.m  testFieldLineCalc.m  testFieldLineCalc.m~  testFieldLineCalcAntiHelmholtz.m  testFunctionThatSumsSingleLoopFields.m  testSingleLoopFieldFunction.asv  testSingleLoopFieldFunction.m
code-examples/: an_string.m  load_LIF_data.m  plot_array.m  plot_line.m  sub_plot.m  textbox.m
cpp-template/: Makefile  exec.bat  file.settings  launch.bat  main  main.cpp  make.bat  run.slurm  test.cpp  testFile.csv  transfer.bat
customMatlabPackages/: defineConstants.m
latex-template/: UltracoldNeutralPlasmas.bib  ms.aux  ms.bbl  ms.blg  ms.dvi  ms.out  ms.ps  ms.tex  schematic-with-levels.eps
matlab/: getlinespecs.m  init.m  linecolors.m  readtext.m  scratch.m  strfindfirst.m
matlab-plotting/: an_string.m  plot_array.m  sub_plot.m  textbox.m
matlab/other/: gen_password.m  (+2 more)
python/: packages.bat  pyproject.toml  requirements.txt  scratch.py  standardplot.py
python/scripts/: numpy_notes.py  scratch.py  standardplot.py
write-up/: ms.aux  ms.tex
write-up-template/: ms.tex
(+61 files in other folders)
