[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Grant Gorman <gg25@rice.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
plotly = "^5.13.1"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
